[package]
name = "jsonnlp"
version = "0.2.0"
authors = ["Damir Cavar <damir@semiring.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = { version = "^1.0", default-features = false, features = ["alloc"] }
restson = "^0.7"
reqwest = { version = "^0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
configparser = "^2.0.0"
